WikimediaUI theme: Fix border on narrow bottom toolbars
Fixing narrow bottom toolbars' overflow border.

--- a/src/themes/wikimediaui/tools.less
+++ b/src/themes/wikimediaui/tools.less
@@ -16,21 +16,30 @@
 		}
 
 		.oo-ui-toolbar-bar {
-			border: 0;
 			background-color: transparent;
+			border: 0;
 			box-shadow: none;
 		}
 	}
 
-	&-narrow .oo-ui-toolbar-bar:after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: @size-tool;
-		left: 0;
-		width: 100%;
-		height: 0;
-		border-bottom: @border-toolbar;
+	&-narrow {
+		&-bar:after {
+			content: '';
+			display: block;
+			position: absolute;
+			top: @size-tool;
+			left: 0;
+			width: 100%;
+			height: 0;
+		}
+
+		&.oo-ui-toolbar-position-top .oo-ui-toolbar-bar:after {
+			border-bottom: @border-toolbar;
+		}
+
+		&.oo-ui-toolbar-position-bottom .oo-ui-toolbar-bar:after {
+			border-top: @border-toolbar;
+		}
 	}
 
 	&-actions {
